# zealot_ai

./: .env  .gitignore  README.md  app-settings-small.yaml  app-settings.yaml  publish.sh  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup_dev.sh  tree.txt  version.py
lib/ally/: pyproject.toml  requirements.txt
lib/ally/ally_ai/chroma/: __init__.py
lib/ally/ally_ai/core/: __init__.py
lib/ally/ally_ai/langchain/: __init__.py
lib/ally/ally_ai/langsmith/: __init__.py
lib/ally/ally_ai/llamaindex/: __init__.py
lib/chroma/: README.md  pyproject.toml
lib/chroma/ally_ai_chroma/: AllyChroma.py  Chroma.py  ChromaEmbeddingsVisualisation.py  ChromaEmbeddingsVisualisor.py  __init__.py
lib/chroma_visualise/: README.md  pyproject.toml
lib/chroma_visualise/ally_ai_chroma_visualise/: ChromaEmbeddingsVisualisor.py  EmbeddingsVisualisor.py  __init__.py
lib/core/: README.md  pyproject.toml
lib/core/ally_ai_core/: Decorators.py  Logs.py  __init__.py  utils.py
lib/core/ally_ai_core/ContextManagers/: __init__.py  log_step_contextmanager.py
lib/core/ally_ai_core/Decorators/: __init__.py  logged.py  logstep_decorator.py  timed.py  timed_decorator.py  trace.py
lib/core/ally_ai_core/context_managers/: __init__.py  logged_step.py
lib/core/ally_ai_core/embeddings/: EmbeddingsVisualisation.py  EmbeddingsVisualisor.py
lib/core/ally_ai_core/errors/: __init__.py
lib/core/ally_ai_core/settings/: Settings.py  __init__.py
lib/core/scripts/: publish.sh  readme.md  setup_dev.sh
lib/core/tests/: __init__.py
lib/core/tests/Settings/: test_call.py  test_initialize.py
lib/langchain/: README.md  pyproject.toml
lib/langchain/ally_ai_langchain/: EmbeddingModel.py  Embeddings.py  LLM.py  __init__.py  api_key.py
lib/langchain/tests/Embeddings/: test_initialize.py  test_invoke.py  test_settings.py
lib/langchain/tests/LLM/: test_initialize.py  test_invoke.py  test_settings.py
lib/langsmith/: README.md  pyproject.toml
lib/langsmith/ally_ai_langsmith/: Langsmith.py  __init__.py
lib/llamaindex/: LICENSE  pyproject.toml
lib/llamaindex/ally_ai_llamaindex/: EmbeddingModel.py  Embeddings.py  LLM.py  __init__.py
lib/llamaindex/scripts/: setup_dev.sh
pypi_scripts/: publish_test.sh
scripts/: build.sh  publish.sh  setup_dev.sh
src/ally_ai/models/langchain/openai/: Embeddings.py  LLM.py
src/ally_ai/settings/: Settings.py
src/zealot_ai/: __init__.py
src/zealot_ai/core/: __init__.py  utils.py
src/zealot_ai/errors/: YamlParseError.py  __init__.py
src/zealot_ai/langchain/: __init__.py
src/zealot_ai/models/langchain/openai/: Embeddings.py  LLM.py  LLMWrapper.py
src/zealot_ai/settings/: EmbeddingSettings.py  LLMSettings.py  Settings.py
src/zealot_ai/vectordbs/: ChromaDb.py
src/zealot_ai/vectordbs/chromadb/: ChromaDbManager.py
tests/: Utils.py  __init__.py  test_core_settings.py  test_langchain_all.py  test_langchain_embeddings.py  test_langchain_llm.py  test_version.py
tests/Embeddings/: test_initialize.py  test_invoke.py  test_settings.py
tests/LLM/: __init__.py  test_initialize.py  test_invoke.py  test_settings.py
tests/LLMSettings/: test_initialize.py
tests/Settings/: test_call.py  test_initialize.py
tests/chroma/: app-settings.yaml  test_chroma.py  test_visualise.py
tests/chroma_visualise/: app-settings.yaml  test_visualise.py
tests/core/: test_core_settings.py  test_log_step_contextmanager.py  test_logstep.py  test_logstep_decorator.py  test_timed_decorator.py
tests/default/: test_initialize.py
tests/files/: pyproject.toml  test-app-settings.yaml
tests/langchain/: __init__.py  test_init.py  test_langchain_embeddings.py  test_langchain_llm.py
tests/langsmith/: test_langsmith.py
tests/llamaindex/: test_llm.py
