[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ally-ai-llamaindex"
version = "0.0.4"
authors = [
  { name="Tugbay Atilla", email="tugbayatilla@gmail.com" },
]
description = "llamaindex azure openai package for ally"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "llama-index-llms-azure-openai",
  "llama_index.embeddings.azure_openai",
  "ally-ai-core=*"
]

[project.urls]
Homepage = "https://github.com/users/tugbayatilla/projects/3/"
Issues = "https://github.com/users/tugbayatilla/projects/3/views/8"